src/audio/codec/flac/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Copy, Clone, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd)]
pub struct __BindgenBitfieldUnit<Storage> {
    storage: Storage,
}
impl<Storage> __BindgenBitfieldUnit<Storage> {
    #[inline]
    pub const fn new(storage: Storage) -> Self {
        Self { storage }
    }
}
impl<Storage> __BindgenBitfieldUnit<Storage>
where
    Storage: AsRef<[u8]> + AsMut<[u8]>,
{
    #[inline]
    fn extract_bit(byte: u8, index: usize) -> bool {
        let bit_index = if cfg!(target_endian = "big") {
            7 - (index % 8)
        } else {
            index % 8
        };
        let mask = 1 << bit_index;
        byte & mask == mask
    }
    #[inline]
    pub fn get_bit(&self, index: usize) -> bool {
        debug_assert!(index / 8 < self.storage.as_ref().len());
        let byte_index = index / 8;
        let byte = self.storage.as_ref()[byte_index];
        Self::extract_bit(byte, index)
    }
    #[inline]
    pub unsafe fn raw_get_bit(this: *const Self, index: usize) -> bool {
        debug_assert!(index / 8 < core::mem::size_of::<Storage>());
        let byte_index = index / 8;
        let byte = unsafe {
            *(core::ptr::addr_of!((*this).storage) as *const u8).offset(byte_index as isize)
        };
        Self::extract_bit(byte, index)
    }
    #[inline]
    fn change_bit(byte: u8, index: usize, val: bool) -> u8 {
        let bit_index = if cfg!(target_endian = "big") {
            7 - (index % 8)
        } else {
            index % 8
        };
        let mask = 1 << bit_index;
        if val { byte | mask } else { byte & !mask }
    }
    #[inline]
    pub fn set_bit(&mut self, index: usize, val: bool) {
        debug_assert!(index / 8 < self.storage.as_ref().len());
        let byte_index = index / 8;
        let byte = &mut self.storage.as_mut()[byte_index];
        *byte = Self::change_bit(*byte, index, val);
    }
    #[inline]
    pub unsafe fn raw_set_bit(this: *mut Self, index: usize, val: bool) {
        debug_assert!(index / 8 < core::mem::size_of::<Storage>());
        let byte_index = index / 8;
        let byte = unsafe {
            (core::ptr::addr_of_mut!((*this).storage) as *mut u8).offset(byte_index as isize)
        };
        unsafe { *byte = Self::change_bit(*byte, index, val) };
    }
    #[inline]
    pub fn get(&self, bit_offset: usize, bit_width: u8) -> u64 {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < self.storage.as_ref().len());
        debug_assert!((bit_offset + (bit_width as usize)) / 8 <= self.storage.as_ref().len());
        let mut val = 0;
        for i in 0..(bit_width as usize) {
            if self.get_bit(i + bit_offset) {
                let index = if cfg!(target_endian = "big") {
                    bit_width as usize - 1 - i
                } else {
                    i
                };
                val |= 1 << index;
            }
        }
        val
    }
    #[inline]
    pub unsafe fn raw_get(this: *const Self, bit_offset: usize, bit_width: u8) -> u64 {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < core::mem::size_of::<Storage>());
        debug_assert!((bit_offset + (bit_width as usize)) / 8 <= core::mem::size_of::<Storage>());
        let mut val = 0;
        for i in 0..(bit_width as usize) {
            if unsafe { Self::raw_get_bit(this, i + bit_offset) } {
                let index = if cfg!(target_endian = "big") {
                    bit_width as usize - 1 - i
                } else {
                    i
                };
                val |= 1 << index;
            }
        }
        val
    }
    #[inline]
    pub fn set(&mut self, bit_offset: usize, bit_width: u8, val: u64) {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < self.storage.as_ref().len());
        debug_assert!((bit_offset + (bit_width as usize)) / 8 <= self.storage.as_ref().len());
        for i in 0..(bit_width as usize) {
            let mask = 1 << i;
            let val_bit_is_set = val & mask == mask;
            let index = if cfg!(target_endian = "big") {
                bit_width as usize - 1 - i
            } else {
                i
            };
            self.set_bit(index + bit_offset, val_bit_is_set);
        }
    }
    #[inline]
    pub unsafe fn raw_set(this: *mut Self, bit_offset: usize, bit_width: u8, val: u64) {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < core::mem::size_of::<Storage>());
        debug_assert!((bit_offset + (bit_width as usize)) / 8 <= core::mem::size_of::<Storage>());
        for i in 0..(bit_width as usize) {
            let mask = 1 << i;
            let val_bit_is_set = val & mask == mask;
            let index = if cfg!(target_endian = "big") {
                bit_width as usize - 1 - i
            } else {
                i
            };
            unsafe { Self::raw_set_bit(this, index + bit_offset, val_bit_is_set) };
        }
    }
}
pub const DRFLAC_VERSION_MAJOR: u32 = 0;
pub const DRFLAC_VERSION_MINOR: u32 = 13;
pub const DRFLAC_VERSION_REVISION: u32 = 4;
pub const DRFLAC_TRUE: u32 = 1;
pub const DRFLAC_FALSE: u32 = 0;
pub const DR_FLAC_BUFFER_SIZE: u32 = 4096;
pub const DRFLAC_METADATA_BLOCK_TYPE_STREAMINFO: u32 = 0;
pub const DRFLAC_METADATA_BLOCK_TYPE_PADDING: u32 = 1;
pub const DRFLAC_METADATA_BLOCK_TYPE_APPLICATION: u32 = 2;
pub const DRFLAC_METADATA_BLOCK_TYPE_SEEKTABLE: u32 = 3;
pub const DRFLAC_METADATA_BLOCK_TYPE_VORBIS_COMMENT: u32 = 4;
pub const DRFLAC_METADATA_BLOCK_TYPE_CUESHEET: u32 = 5;
pub const DRFLAC_METADATA_BLOCK_TYPE_PICTURE: u32 = 6;
pub const DRFLAC_METADATA_BLOCK_TYPE_INVALID: u32 = 127;
pub const DRFLAC_PICTURE_TYPE_OTHER: u32 = 0;
pub const DRFLAC_PICTURE_TYPE_FILE_ICON: u32 = 1;
pub const DRFLAC_PICTURE_TYPE_OTHER_FILE_ICON: u32 = 2;
pub const DRFLAC_PICTURE_TYPE_COVER_FRONT: u32 = 3;
pub const DRFLAC_PICTURE_TYPE_COVER_BACK: u32 = 4;
pub const DRFLAC_PICTURE_TYPE_LEAFLET_PAGE: u32 = 5;
pub const DRFLAC_PICTURE_TYPE_MEDIA: u32 = 6;
pub const DRFLAC_PICTURE_TYPE_LEAD_ARTIST: u32 = 7;
pub const DRFLAC_PICTURE_TYPE_ARTIST: u32 = 8;
pub const DRFLAC_PICTURE_TYPE_CONDUCTOR: u32 = 9;
pub const DRFLAC_PICTURE_TYPE_BAND: u32 = 10;
pub const DRFLAC_PICTURE_TYPE_COMPOSER: u32 = 11;
pub const DRFLAC_PICTURE_TYPE_LYRICIST: u32 = 12;
pub const DRFLAC_PICTURE_TYPE_RECORDING_LOCATION: u32 = 13;
pub const DRFLAC_PICTURE_TYPE_DURING_RECORDING: u32 = 14;
pub const DRFLAC_PICTURE_TYPE_DURING_PERFORMANCE: u32 = 15;
pub const DRFLAC_PICTURE_TYPE_SCREEN_CAPTURE: u32 = 16;
pub const DRFLAC_PICTURE_TYPE_BRIGHT_COLORED_FISH: u32 = 17;
pub const DRFLAC_PICTURE_TYPE_ILLUSTRATION: u32 = 18;
pub const DRFLAC_PICTURE_TYPE_BAND_LOGOTYPE: u32 = 19;
pub const DRFLAC_PICTURE_TYPE_PUBLISHER_LOGOTYPE: u32 = 20;
pub type wchar_t = cty::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct max_align_t {
    pub __clang_max_align_nonce1: cty::c_longlong,
    pub __clang_max_align_nonce2: f64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of max_align_t"][::core::mem::size_of::<max_align_t>() - 16usize];
    ["Alignment of max_align_t"][::core::mem::align_of::<max_align_t>() - 8usize];
    ["Offset of field: max_align_t::__clang_max_align_nonce1"]
        [::core::mem::offset_of!(max_align_t, __clang_max_align_nonce1) - 0usize];
    ["Offset of field: max_align_t::__clang_max_align_nonce2"]
        [::core::mem::offset_of!(max_align_t, __clang_max_align_nonce2) - 8usize];
};
pub type drflac_int8 = cty::c_schar;
pub type drflac_uint8 = cty::c_uchar;
pub type drflac_int16 = cty::c_short;
pub type drflac_uint16 = cty::c_ushort;
pub type drflac_int32 = cty::c_int;
pub type drflac_uint32 = cty::c_uint;
pub type drflac_int64 = cty::c_longlong;
pub type drflac_uint64 = cty::c_ulonglong;
pub type drflac_uintptr = drflac_uint32;
pub type drflac_bool8 = drflac_uint8;
pub type drflac_bool32 = drflac_uint32;
unsafe extern "C" {
    pub fn drflac_version(
        pMajor: *mut drflac_uint32,
        pMinor: *mut drflac_uint32,
        pRevision: *mut drflac_uint32,
    );
}
unsafe extern "C" {
    pub fn drflac_version_string() -> *const cty::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drflac_allocation_callbacks {
    pub pUserData: *mut cty::c_void,
    pub onMalloc: ::core::option::Option<
        unsafe extern "C" fn(sz: usize, pUserData: *mut cty::c_void) -> *mut cty::c_void,
    >,
    pub onRealloc: ::core::option::Option<
        unsafe extern "C" fn(
            p: *mut cty::c_void,
            sz: usize,
            pUserData: *mut cty::c_void,
        ) -> *mut cty::c_void,
    >,
    pub onFree: ::core::option::Option<
        unsafe extern "C" fn(p: *mut cty::c_void, pUserData: *mut cty::c_void),
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drflac_allocation_callbacks"]
        [::core::mem::size_of::<drflac_allocation_callbacks>() - 16usize];
    ["Alignment of drflac_allocation_callbacks"]
        [::core::mem::align_of::<drflac_allocation_callbacks>() - 4usize];
    ["Offset of field: drflac_allocation_callbacks::pUserData"]
        [::core::mem::offset_of!(drflac_allocation_callbacks, pUserData) - 0usize];
    ["Offset of field: drflac_allocation_callbacks::onMalloc"]
        [::core::mem::offset_of!(drflac_allocation_callbacks, onMalloc) - 4usize];
    ["Offset of field: drflac_allocation_callbacks::onRealloc"]
        [::core::mem::offset_of!(drflac_allocation_callbacks, onRealloc) - 8usize];
    ["Offset of field: drflac_allocation_callbacks::onFree"]
        [::core::mem::offset_of!(drflac_allocation_callbacks, onFree) - 12usize];
};
pub type drflac_cache_t = drflac_uint32;
pub const drflac_container_drflac_container_native: drflac_container = 0;
pub const drflac_container_drflac_container_ogg: drflac_container = 1;
pub const drflac_container_drflac_container_unknown: drflac_container = 2;
pub type drflac_container = cty::c_uint;
pub const drflac_seek_origin_DRFLAC_SEEK_SET: drflac_seek_origin = 0;
pub const drflac_seek_origin_DRFLAC_SEEK_CUR: drflac_seek_origin = 1;
pub const drflac_seek_origin_DRFLAC_SEEK_END: drflac_seek_origin = 2;
pub type drflac_seek_origin = cty::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drflac_seekpoint {
    pub firstPCMFrame: drflac_uint64,
    pub flacFrameOffset: drflac_uint64,
    pub pcmFrameCount: drflac_uint16,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drflac_seekpoint"][::core::mem::size_of::<drflac_seekpoint>() - 24usize];
    ["Alignment of drflac_seekpoint"][::core::mem::align_of::<drflac_seekpoint>() - 8usize];
    ["Offset of field: drflac_seekpoint::firstPCMFrame"]
        [::core::mem::offset_of!(drflac_seekpoint, firstPCMFrame) - 0usize];
    ["Offset of field: drflac_seekpoint::flacFrameOffset"]
        [::core::mem::offset_of!(drflac_seekpoint, flacFrameOffset) - 8usize];
    ["Offset of field: drflac_seekpoint::pcmFrameCount"]
        [::core::mem::offset_of!(drflac_seekpoint, pcmFrameCount) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drflac_streaminfo {
    pub minBlockSizeInPCMFrames: drflac_uint16,
    pub maxBlockSizeInPCMFrames: drflac_uint16,
    pub minFrameSizeInPCMFrames: drflac_uint32,
    pub maxFrameSizeInPCMFrames: drflac_uint32,
    pub sampleRate: drflac_uint32,
    pub channels: drflac_uint8,
    pub bitsPerSample: drflac_uint8,
    pub totalPCMFrameCount: drflac_uint64,
    pub md5: [drflac_uint8; 16usize],
}
